# dojors

./: README.md
3.guessing_game/: Cargo.toml
3.guessing_game/src/: main.rs
4.variables/src/: main.rs
5.data_types/src/: main.rs
50_rust_projects/p01_compress_file/: Cargo.toml  tmp
50_rust_projects/p02_decompress_file/: Cargo.toml
50_rust_projects/p03_read_csv_file/: Cargo.toml
50_rust_projects/p04_read_json_file/: Cargo.toml
50_rust_projects/p05_write_json_file/: Cargo.toml
50_rust_projects/p06_get_request/: Cargo.toml
50_rust_projects/p07_async_await/: Cargo.toml
50_rust_projects/p08_making_api_calls/: Cargo.toml
50_rust_projects/p08_making_api_calls/src/: main.rs
50_rust_projects/p09_very_basic_auth/: Cargo.toml
50_rust_projects/p10_download_images/: Cargo.toml
50_rust_projects/p11_extract_links/: Cargo.toml
50_rust_projects/p12_actix_rhai_api/: Cargo.toml
7.control_flow/src/: main.rs
8.ownership/src/: main.rs
9.structs/src/: main.rs
Easy_Rust/10.Printing_Hello_World/: Cargo.toml
Easy_Rust/13.The_stack_the_heap_and_pointers/: Cargo.toml
Easy_Rust/14.More_about_printing/: Cargo.toml
Easy_Rust/19.Giving_references_to_functions/: Cargo.toml
Easy_Rust/20.Copy_Types/: Cargo.toml
Easy_Rust/21.Collection_Types/: Cargo.toml
Easy_Rust/30.References_and_the_dot_operator/: Cargo.toml
Easy_Rust/33.Other_Collections/: Cargo.toml
Easy_Rust/40.Types_of_str/: Cargo.toml
Lets_Gets_Rusty/13.Testing_1/: Cargo.toml
Lets_Gets_Rusty/2.Programming_a_Guessing_Game/: Cargo.toml
a_half_hour_to_learn_rust/: Cargo.toml
(+313 files in other folders)
